syntax = "proto3";

option go_package="./";

// Phase 1: Prepare-Promise phase
message PrepareRequest{
  uint64 Ballot = 1;
}

message PromiseResponse {
  bool Promised = 1;
  // Ballot of previously accepted propose
  uint64 Ballot = 2;
  // Color accepted, according to previously accepted
  string Color = 3;
}

// Phase 2: Propose-Accept phase
message ProposeRequest {
  uint64 Ballot = 1;
  string Color = 2;
}

message AcceptResponse {
  bool Accepted = 1;
}

service Consensus {
  rpc Promise (PrepareRequest) returns (PromiseResponse);
  rpc Accept (ProposeRequest) returns (AcceptResponse);
}
